<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_new_challenge_period_selection_question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="21dp"
        android:layout_marginTop="60dp"
        android:lineSpacingExtra="6sp"
        android:text="@string/new_challenge_select_date_question"
        android:textColor="?white_text"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_new_challenge_period_selectionl_description"
        style="@style/TextAppearance.Hmh.BodyMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="7dp"
        android:text="@string/new_challenge_select_date_description"
        android:textColor="?gray2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_challenge_period_selection_question" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_new_challenge_seven_days"
        style="@style/TextAppearance.Hmh.TitleSmall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="19dp"
        android:layout_marginTop="94dp"
        android:background="@drawable/new_challenge_selector_btn_data"
        android:gravity="center"
        android:text="@string/new_challenge_seven_days"
        android:textColor="?white_text"
        app:layout_constraintBottom_toTopOf="@id/btn_new_challenge_fourteen_days"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_new_challenge_period_selectionl_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_new_challenge_fourteen_days"
        style="@style/TextAppearance.Hmh.TitleSmall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="19dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/new_challenge_selector_btn_data"
        android:gravity="center"
        android:text="@string/new_challenge_fourteen_days"
        android:textColor="?white_text"
        app:layout_constraintBottom_toTopOf="@id/btn_new_challenge_twenty_days"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_new_challenge_seven_days" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_new_challenge_twenty_days"
        style="@style/TextAppearance.Hmh.TitleSmall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="19dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/new_challenge_selector_btn_data"
        android:gravity="center"
        android:text="@string/new_challenge_twenty_days"
        android:textColor="?white_text"
        app:layout_constraintBottom_toTopOf="@id/btn_new_challenge_thirty_days"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_new_challenge_fourteen_days" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_new_challenge_thirty_days"
        style="@style/TextAppearance.Hmh.TitleSmall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="19dp"
        android:layout_marginBottom="300dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/new_challenge_selector_btn_data"
        android:gravity="center"
        android:text="@string/new_challenge_thirty_days"
        android:textColor="?white_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_new_challenge_twenty_days" />

</androidx.constraintlayout.widget.ConstraintLayout>
